@@ -150,9 +150,15 @@ FilmEditor::make_dcp_panel ()
 	++r;
 
 	add_label_to_grid_bag_sizer (grid, _dcp_panel, _("Container"), true, wxGBPosition (r, 0));
-	_container = new wxChoice (_dcp_panel, wxID_ANY);
-	grid->Add (_container, wxGBPosition (r, 1), wxDefaultSpan);
-	++r;
+	{
+		wxBoxSizer* s = new wxBoxSizer (wxHORIZONTAL);
+		_container = new wxChoice (_dcp_panel, wxID_ANY);
+		s->Add (_container, 1, wxEXPAND | wxRIGHT, DCPOMATIC_SIZER_X_GAP);
+		_container_size = new wxStaticText (_dcp_panel, wxID_ANY, wxT (""));
+		s->Add (_container_size, 1, wxEXPAND | wxLEFT | wxALIGN_CENTER_VERTICAL);
+		grid->Add (s, wxGBPosition (r, 1), wxDefaultSpan, wxEXPAND);
+		++r;
+	}
 
 	add_label_to_grid_bag_sizer (grid, _dcp_panel, _("Content Type"), true, wxGBPosition (r, 0));
 	_dcp_content_type = new wxChoice (_dcp_panel, wxID_ANY);
@@ -530,6 +536,7 @@ FilmEditor::film_changed (Film::Property p)
 		break;
 	case Film::RESOLUTION:
 		checked_set (_resolution, _film->resolution() == RESOLUTION_2K ? 0 : 1);
+		setup_container ();
 		setup_dcp_name ();
 		break;
 	case Film::J2K_BANDWIDTH:
@@ -618,8 +625,11 @@ FilmEditor::setup_container ()
 	
 	if (i == ratios.end()) {
 		checked_set (_container, -1);
+		checked_set (_container_size, wxT (""));
 	} else {
 		checked_set (_container, n);
+		libdcp::Size const size = fit_ratio_within (_film->container()->ratio (), _film->full_frame ());
+		checked_set (_container_size, wxString::Format("%dx%d", size.width, size.height));
 	}
 	
 	setup_dcp_name ();
